# ThermoRover

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  dht_sensor.c  dht_sensor.h  encoder.c  encoder.h  fuzzy_control.c  fuzzy_control.h  idf_component.yml  index.html  main.c  motor_control.c  motor_control.h  webpage.h  websocket_server.c  websocket_server.h  wifi_manager.c  wifi_manager.h
